src/components/standalones/AudioFieldset/AudioFieldset.css
.AudioFieldset {
  padding: 12px 0;
  width: 20%;
}

.AudioFieldset > fieldset {
  border: none;
}

.AudioFieldset > fieldset > legend {
  display: block;
  margin: 0 auto 12px;
  width: var(--fieldset-width);
  font-family: Neuton, serif;
  font-size: 22px;
  font-weight: lighter;
  color: var(--assort-color);
  text-transform: uppercase;
}

.AudioFieldset__selectAudio {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: row;
  flex-direction: row;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  align-items: center;
  margin: 0 auto 12px;
  width: var(--fieldset-width);
}

